crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__event_log_package_lifecycle.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: log.all_events()
---
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_started
    name: alpha
    version: 0.1.0
  package: alpha@0.1.0
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_attempted
    attempt: 1
    command: cargo publish -p alpha
    max_attempts: 1
  package: alpha@0.1.0
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_output
    stdout_tail: Uploading alpha v0.1.0
    stderr_tail: ""
  package: alpha@0.1.0
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_published
    duration_ms: 2100
  package: alpha@0.1.0
