crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__execution_finished_complete_failure_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: ExecutionFinished {
        result: CompleteFailure,
    },
    package: "workspace",
}
