crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__full_publish_lifecycle_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: log.all_events()
---
[
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PlanCreated {
            plan_id: "plan-full",
            package_count: 2,
        },
        package: "workspace",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PreflightStarted,
        package: "workspace",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PreflightWorkspaceVerify {
            passed: true,
            output: "ok",
        },
        package: "workspace",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PreflightComplete {
            finishability: Proven,
        },
        package: "workspace",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ExecutionStarted,
        package: "workspace",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PackageStarted {
            name: "core",
            version: "0.1.0",
        },
        package: "core@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PackageAttempted {
            attempt: 1,
            command: "cargo publish -p core",
            max_attempts: 1,
        },
        package: "core@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PackagePublished {
            duration_ms: 1500,
        },
        package: "core@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessStarted {
            method: Api,
        },
        package: "core@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessComplete {
            duration_ms: 3000,
            attempts: 2,
        },
        package: "core@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PackageStarted {
            name: "cli",
            version: "0.1.0",
        },
        package: "cli@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: PackagePublished {
            duration_ms: 2000,
        },
        package: "cli@0.1.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ExecutionFinished {
            result: Success,
        },
        package: "workspace",
    },
]
