crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__index_readiness_check_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: IndexReadinessCheck {
        crate_name: "my-crate",
        version: "1.0.0",
        found: true,
    },
    package: "my-crate@1.0.0",
}
