crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_attempted_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PackageAttempted {
        attempt: 2,
        command: "cargo publish -p core-lib",
        max_attempts: 2,
    },
    package: "core-lib@0.1.0",
}
