crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_failed_ambiguous_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PackageFailed {
        class: Ambiguous,
        message: "connection reset during upload",
    },
    package: "flaky@1.0.0",
}
